feat: initial Docker support and some refactor/bugfixes - initial Docker support - introduce APP_ENV and APP_DEBUG variable - documentations and formatting fixes - orders.actions.prune: add missing error handling - orders.requests: ItemOnCreate -> ItemCreate, ItemOnUpdate -> ItemUpdate - orders.routes: limit orders/__prune__ to local/debug mode - helpers: add debugging print helper - main: move initial setup to setup.init() - setup: move setup related function from main to setup - setup: ASCII art and banner on startup
